--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,4 +26,5 @@
       {{ form.submit() }}
     </div>
   </form>
+  <div>New user? <a href="{{ url_for('register') }}">Register</a> now!</div>
 {%- endblock %}
