--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,13 +7,15 @@
   {%- endif %}
   </head>
   <body>
-    <div>MicroBlog: 
+    <div>
+      MicroBlog: 
       <a href="{{ url_for('index') }}">Home</a>
-      {% if current_user.is_anonymous %}
+      {%- if current_user.is_anonymous %}
       <a href="{{ url_for('login') }}">Login</a>
-      {% else %}
+      {%- else %}
+      <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
       <a href="{{ url_for('logout') }}">Logout</a>
-      {% endif %}
+      {%- endif %}
     </div>
     <hr>
     {%- with messages = get_flashed_messages() %}
