--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{%- block content %}
   <h1>Register</h1>
   <form method="post" novalidate>
     {{ form.hidden_tag() }}
@@ -44,4 +44,4 @@
       {{ form.submit() }}
     </div>
   </form>
-{% endblock %}
+{%- endblock %}
