--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -14,6 +14,10 @@
         {%- endif %}
         {%- if user == current_user %}
         <div><a href="{{ url_for('edit_profile') }}">Edit profile</a></div>
+        {%- elif not current_user.is_following(user) %}
+        <div><a href="{{ url_for('follow', username=user.username) }}">Follow</a></div>
+        {%- else %}
+        <div><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></div>
         {%- endif %}
       </td>
     </tr>
