--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,29 +1,11 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{%- block content %}
+{% block app_content %}
   <h1>Edit Profile</h1>
-  <form method="post">
-    {{ form.hidden_tag() }}
-    <div>
-      <div>{{ form.username.label }}</div>
-      <div>{{ form.username(size=32) }}</div>
-      <div>
-        {%- for error in form.username.errors %}
-        <span style='color: red;'>{{ error }}</span>
-        {%- endfor %}
-      </div>
+  <div class="row">
+    <div class="col-md-4">
+      {{ wtf.quick_form(form) }}
     </div>
-    <div>
-      <div>{{ form.about_me.label }}</div>
-      <div>{{ form.about_me(rows=4, cols=50) }}</div>
-      <div>
-        {%- for error in form.about_me.errors %}
-        <span style='color: red;'>{{ error }}</span>
-        {%- endfor %}
-      </div>
-    </div>
-    <div>
-      {{ form.submit() }}
-    </div>
-  </form>
-{%- endblock %}
+  </div>
+{% endblock %}
