--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,47 +1,11 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{%- block content %}
+{% block app_content %}
   <h1>Register</h1>
-  <form method="post" novalidate>
-    {{ form.hidden_tag() }}
-    <div>
-      <div>{{ form.username.label }}</div>
-      <div>{{ form.username(size=32) }}</div>
-      <div>
-        {% for error in form.username.errors %}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
-      </div>
+  <div class="row">
+    <div class="col-md-4">
+      {{ wtf.quick_form(form) }}
     </div>
-    <div>
-      <div>{{ form.email.label }}</div>
-      <div>{{ form.email(size=64) }}</div>
-      <div>
-        {% for error in form.email.errors %}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
-      </div>
-    </div>
-    <div>
-      <div>{{ form.password.label }}</div>
-      <div>{{ form.password(size=32) }}</div>
-      <div>
-        {% for error in form.password.errors %}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
-      </div>
-    </div>
-    <div>
-      <div>{{ form.password2.label }}</div>
-      <div>{{ form.password2(size=32) }}</div>
-      <div>
-        {% for error in form.password2.errors %}
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
-      </div>
-    </div>
-    <div>
-      {{ form.submit() }}
-    </div>
-  </form>
-{%- endblock %}
+  </div>
+{% endblock %}
