--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -1,25 +1,11 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{%- block content %}
+{% block app_content %}
   <h1>Reset Your Password</h1>
-  <form method="post" novalidate>
-    {{ form.hidden_tag() }}
-    <div>
-      <div>{{ form.password.label }}</div>
-      <div>{{ form.password(size=32) }}</div>
-      {%- for error in form.password.errors %}
-      <span style="color: red;">{{ error }}</span>
-      {%- endfor %}
+  <div class="row">
+    <div class="col-md-4">
+      {{ wtf.quick_form(form) }}
     </div>
-    <div>
-      <div>{{ form.password2.label }}</div>
-      <div>{{ form.password2(size=32) }}</div>
-      {%- for error in form.password2.errors %}
-      <span style="color: red;">{{ error }}</span>
-      {%- endfor %}
-    </div>
-    <div>
-      {{ form.submit() }}
-    </div>
-  </form>
-{%- endblock %}
+  </div>
+{% endblock %}
