--- a/app/templates/reset_password_request.html
+++ b/app/templates/reset_password_request.html
@@ -1,18 +1,11 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{%- block content %}
+{% block app_content %}
   <h1>Reset Password</h1>
-  <form method="post" novalidate>
-    {{ form.hidden_tag() }}
-    <div>
-      <div>{{ form.email.label }}</div>
-      <div>{{ form.email(size=64) }}</div>
-      {%- for error in form.email.errors %}
-      <span style="color: red;">{{ error }}</span>
-      {%- endfor %}
+  <div class="row">
+    <div class="col-md-4">
+      {{ wtf.quick_form(form) }}
     </div>
-    <div>
-      {{ form.submit() }}
-    </div>
-  </form>
-{%- endblock %}
+  </div>
+{% endblock %}
